k8s/chatalk/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
    - name: ui-port
      protocol: TCP
      port: 80
      targetPort: 80
