k8s/chatalk/ui/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui
spec:
  tls:
  - hosts:
    - beta.chatalk.fr
    secretName: chatalk-cert
  rules:
  - host: beta.chatalk.fr
    http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
